--- a/src/_page.scss
+++ b/src/_page.scss
@@ -11,3 +11,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
