--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -8,6 +8,7 @@
     position: fixed;
     width: 25%;
     background-color: rgba(0, 233, 159, 0.4); /* Hex: #00E99F */
+    text-transform: uppercase;
 
     // Wrapper
     &--inner {
@@ -29,34 +30,39 @@
 
     &__name {
         margin-bottom: 0;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         font-weight: initial;
     }
 
     &__title {
         margin-top: 0;
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: initial;
     }
 
     // Navigation
     &__navigation {
-        margin: 4em 0;
+        margin: 4em 0 6em 0;
         padding: 0;
         text-align: left;
         list-style-type: none;
+
+        li:hover .sidebar__button:after {
+            content: ' 🞂';
+        }
     }
 
     &__button {
         display: block;
         width: 50%;
-        padding-bottom: 0.8rem;
+        padding: 0.4rem 0;
         text-align: left;
         cursor: pointer;
+        opacity: 0.8;
 
         &--small {
             font-size: 0.8rem;
-            padding-bottom: 0.5rem;
+            padding-bottom: 0.6rem;
         }
 
         &--contact {
@@ -65,17 +71,34 @@
             padding: 0;
             background-size: 1em 1em;
         }
+
+        &:hover {
+            opacity: 1;
+        }
     }
 
     // Contact
+    &__contact {
+        //opacity: 0.8;
+    }
+
+    &__label {
+        display: block;
+        font-size: 0.8rem;
+        padding-bottom: 0.4rem;
+        cursor: default;
+        opacity: 0.8;
+    }
+
     &__icons {
-        margin: 0;
+        margin: 0 0 0 -0.2em;
         padding: 0;
         list-style-type: none;
 
         & > li {
             display: inline-block;
-            padding-right: 0.6em;
+            margin-right: 0.4em;
+            padding: 0.2em;
         }
     }
 }
