portfolio page progress

--- a/src/_global.scss
+++ b/src/_global.scss
@@ -1,4 +1,6 @@
 // _global.scss
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+
 $font-system-ui: -apple-system, BlinkMacSystemFont;
 $font-known-system-ui: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans';
 $font-fallback: 'Helvetica Neue', sans-serif;
