--- a/src/_page.scss
+++ b/src/_page.scss
@@ -12,6 +12,10 @@ body {
     background-attachment: fixed;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+}
+
 a {
     color: inherit;
     text-decoration: none;
