list styling and patches

--- a/src/_global.scss
+++ b/src/_global.scss
@@ -10,3 +10,17 @@ $font-stack: $font-system-ui, $font-known-system-ui, $font-fallback;
 $primary-color:    #00E99F;
 $foreground-color: #FAFAFA;
 $background-color: #1C1E1F;
+
+$grey:             #929292;
+$sky-blue:         #00D4FF;
+$ocean-blue:       #0055FF;
+$purply-blue:      #2A00FF;
+$purple:           #AA00FF;
+$pink:             #FF00D4;
+$vibrant-pink:     #FF0054;
+$red:              #FF001D;
+$orange:           #FF2A00;
+$light-orange:     #FFAA00;
+$yellow:           #FFFF00;
+$green:            #2CC66C;
+
