portfolio entries updated

--- a/src/_global.scss
+++ b/src/_global.scss
@@ -15,7 +15,7 @@ $grey:             #929292;
 $sky-blue:         #00D4FF;
 $ocean-blue:       #0055FF;
 $purply-blue:      #2A00FF;
-$purple:           #AA00FF;
+$purple:           #BB32FF;
 $pink:             #FF00D4;
 $vibrant-pink:     #FF0054;
 $red:              #FF001D;
