--- a/src/components/Resume.scss
+++ b/src/components/Resume.scss
@@ -1,7 +1,7 @@
 // Resume.scss
 
 .resume__document {
-    min-height: 100vh;
+    min-height: calc(100vh - 150px);
     margin-top: 16px;
     filter: brightness(95%);
 }
@@ -15,7 +15,7 @@
     }
 
     &:nth-of-type(1) > canvas {
-        border-radius: 16px 16px 0 0;
+        border-radius: 16px;
     }
 
     &:nth-of-type(2) > canvas {
