mobile design test

--- a/src/components/PageContent.scss
+++ b/src/components/PageContent.scss
@@ -18,3 +18,9 @@
         text-transform: uppercase;
     }
 }
+
+@media (max-width: 1096px) {
+    .page-content {
+        margin-left: 0;
+    }
+}
