--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -1,6 +1,7 @@
 // Sidebar.scss
 @use '../global';
 
+
 .sidebar {
     top: 0px;
     bottom: 0px;
@@ -105,6 +106,74 @@
             display: inline-block;
             margin-right: 0.4em;
             padding: 0.2em;
+        }
+    }
+}
+
+@media (max-width: 1096px) {
+    .sidebar {
+        width: 100%;
+        height: 5em;
+        position: unset;
+    
+        &--inner {
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        &__header {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-content: flex-start;
+            flex-grow: 1;
+            text-align: left;
+        }
+    
+        &__avatar {
+            width: 4em;
+            height: 4em;
+            margin: 0.5em 1em 0.5em 0.5em;
+        }
+
+        &__name {
+            margin: 0;
+            padding-top: 0.8em;
+            font-size: 1.2rem;
+        }
+
+        &__title {
+            margin: 0;
+            font-size: 0.8rem;
+        }
+
+        // Navigation
+        &__navigation {
+            display: flex;
+            flex-grow: 1;
+            margin: unset;
+            justify-content: flex-end;
+            align-items: center;
+
+            & > li {
+                height: fit-content;
+            }
+
+            li:hover .sidebar__button:after {
+                content: unset;
+            }
+        }
+
+        &__button {
+            width: fit-content;
+            padding: 0;
+            padding-right: 1em;
+        }
+
+        &__contact {
+            display: none;
         }
     }
 }
