more mobile testing

--- a/src/_page.scss
+++ b/src/_page.scss
@@ -38,3 +38,21 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+@media (max-width: 684px) {
+    h1 {
+        font-size: 1.2em;
+    }
+
+    h2 {
+        font-size: 1em;
+    }
+
+    h3 {
+        font-size: 0.8em;
+    }
+
+    p {
+        font-size: 0.8em;
+    }
+}
