--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -51,7 +51,7 @@
         list-style-type: none;
 
         li:hover .sidebar__button:after {
-            content: ' 🞂';
+            content: ' \1F782';
         }
     }
 
