--- a/src/_page.scss
+++ b/src/_page.scss
@@ -48,15 +48,7 @@ a {
         font-size: 1em;
     }
 
-    h3 {
-        font-size: 0.8em;
-    }
-
-    p {
-        font-size: 0.8em;
-    }
-
-    a {
+    h3, p, a, li {
         font-size: 0.8em;
     }
 }
