--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -113,7 +113,7 @@
 @media (max-width: 1096px) {
     .sidebar {
         width: 100%;
-        height: 5em;
+        height: 5em !important;
         position: unset;
     
         &--inner {
@@ -128,6 +128,7 @@
             flex-direction: column;
             flex-wrap: wrap;
             align-content: flex-start;
+            justify-content: center;
             flex-grow: 1;
             text-align: left;
         }
@@ -135,12 +136,11 @@
         &__avatar {
             width: 4em;
             height: 4em;
-            margin: 0.5em 1em 0.5em 0.5em;
+            margin: 0 1em;
         }
 
         &__name {
             margin: 0;
-            padding-top: 0.8em;
             font-size: 1.2rem;
         }
 
