--- a/src/components/Portfolio.scss
+++ b/src/components/Portfolio.scss
@@ -59,7 +59,9 @@
     &__body {
         flex-basis: 50%;
 		text-align: justify;
-		
+		word-break: break-word;
+        hyphens: auto;
+
 		& > h2 {
 			margin-bottom: 0.4em;
 		}
